--- a/index.html
+++ b/index.html
@@ -1,25 +1,54 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="pt-BR">
 <head>
-<meta charset="UTF-8">
-<title>Minha Primeira Página na Nuvem!</title>
-<style>
-body { font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto,
-Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif; text-align: center;
-margin-top: 50px; background-color: #f0f8ff; color: #333; }
-.container { padding: 20px; max-width: 600px; margin: auto; background: white;
-border-radius: 8px; box-shadow: 0 4px 8px rgba(0,0,0,0.1); }
-h1 { color: #0056b3; }
-b { color: green; }
-</style>
+  <meta charset="UTF-8">
+  <title>Carinha Estrela</title>
+  <style>
+    body {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: 100vh;
+      background: #f0f0f0;
+    }
+
+    .face {
+      width: 200px;
+      height: 200px;
+      background: #fff;
+      border: 3px solid #000;
+      border-radius: 50%;
+      position: relative;
+    }
+
+    /* Olhos em forma de estrela */
+    .eye {
+      position: absolute;
+      top: 40px;
+      font-size: 30px;
+    }
+    .left-eye {
+      left: 50px;
+    }
+    .right-eye {
+      right: 50px;
+    }
+
+    /* Boca ondulada */
+    .mouth {
+      position: absolute;
+      bottom: 50px;
+      left: 50%;
+      transform: translateX(-50%);
+      font-size: 40px;
+    }
+  </style>
 </head>
 <body>
-<div class="container">
-<h1>🚀 Olá, Mundo da Nuvem! 🚀</h1>
-<p>Meu nome é <b>[benker]</b> e este site está hospedado de
-graça no GitHub Pages.</p>
-<p>Isso é um exemplo de <b>PaaS (Plataforma como Serviço)</b>. Eu não precisei
-configurar um servidor, apenas forneci o código e o GitHub publicou para mim!</p>
-</div>
+  <div class="face">
+    <div class="eye left-eye">★</div>
+    <div class="eye right-eye">★</div>
+    <div class="mouth">~~~</div>
+  </div>
 </body>
 </html>
