--- a/index.html
+++ b/index.html
@@ -71,3 +71,89 @@
 
 </body>
 </html>
+
+
+
+<!DOCTYPE html>
+<html lang="pt-br">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Vídeo Fofo de Animais</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            background-color: #f0f2f5;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            min-height: 100vh;
+            margin: 0;
+            padding: 20px;
+            text-align: center;
+        }
+        .container {
+            background-color: #ffffff;
+            padding: 30px;
+            border-radius: 15px;
+            box-shadow: 0 4px 20px rgba(0, 0, 0, 0.1);
+            max-width: 600px;
+            width: 100%;
+        }
+        h1 {
+            color: #333;
+            font-size: 2em;
+            margin-bottom: 20px;
+        }
+        .video-container {
+            position: relative;
+            padding-bottom: 56.25%; /* Proporção 16:9 */
+            height: 0;
+            overflow: hidden;
+            border-radius: 10px;
+            margin-bottom: 30px;
+        }
+        .video-container iframe {
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            border: 0;
+        }
+        .gift-box-link {
+            text-decoration: none;
+            display: inline-block;
+            cursor: pointer;
+            transition: transform 0.2s ease-in-out;
+        }
+        .gift-box-link:hover {
+            transform: scale(1.1);
+        }
+        .gift-box-link .icon {
+            font-size: 6em;
+            text-shadow: 
+                -2px -2px 0 #0000FF,  /* Sombra azul para a esquerda e para cima */
+                 2px -2px 0 #0000FF,  /* Sombra azul para a direita e para cima */
+                -2px  2px 0 #0000FF,  /* Sombra azul para a esquerda e para baixo */
+                 2px  2px 0 #0000FF;  /* Sombra azul para a direita e para baixo */
+        }
+    </style>
+</head>
+<body>
+
+<div class="container">
+    <h1>Vídeo Fofo do Dia</h1>
+    <div class="video-container">
+        <iframe src="https://www.youtube.com/embed/zfl1_FNk0h0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    </div>
+    
+    <a href="https://www.youtube.com/watch?v=zfl1_FNk0h0" class="gift-box-link" target="_blank">
+        <span class="icon" style="color: #FFD700;">🎁</span>
+    </a>
+    <p>Clique na caixinha para ver o vídeo direto no YouTube!</p>
+</div>
+
+</body>
+</html>
