--- a/index.html
+++ b/index.html
@@ -1,6 +1,4 @@
 
-
-<!DOCTYPE html>
 <html lang="pt-br">
 <head>
   <meta charset="UTF-8" />
@@ -14,7 +12,7 @@
   </header>
 
   <main class="gallery">
-    <!-- Card de Personagem -->
+    <!-- demon slayer -->
     <div class="card" data-name="Naruto Uzumaki" data-anime="Naruto" data-description="O ninja número um mais imprevisível de Konoha!">
       <img src="https://i.imgur.com/5A1Zc5J.png" alt="Naruto Uzumaki" />
       <div class="card-info">
