--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
   <h1>Meu Álbum de Fotos</h1>
 
   <div class="galeria">
-    <img src="foto1.jpg" alt="Foto 1">
-    <img src="foto2.jpg" alt="Foto 2">
+    <img src="https://www.instagram.com/p/DN8X392kd7ulEPC11npWYBuXv0utQcjxdzzY9g0/?igsh=eGp0c3FhYWRhY3py" alt="Foto 1">
+    <img src="https://www.google.com/imgres?q=foto%20meme%20macaco%20dando%20dedo&imgurl=https%3A%2F%2Fi.pinimg.com%2F564x%2F2f%2Fc5%2F42%2F2fc5429cc937124e13e1b4ff059bc1c5.jpg&imgrefurl=https%3A%2F%2Fbr.pinterest.com%2Fpin%2F701365341944687808%2F&docid=GzfTk0BtxopPQM&tbnid=8_-9RPhd6YJeZM&vet=12ahUKEwiutqLl5a-PAxVUhJUCHQbxKcMQM3oECBkQAA..i&w=550&h=712&hcb=2&ved=2ahUKEwiutqLl5a-PAxVUhJUCHQbxKcMQM3oECBkQAA" alt="Foto 2">
     <img src="foto3.jpg" alt="Foto 3">
     <img src="foto4.jpg" alt="Foto 4">
   </div>
