--- a/index.html
+++ b/index.html
@@ -1,46 +1,31 @@
 <!DOCTYPE html>
-<html lang="pt-BR">
+<html>
 <head>
-  <meta charset="UTF-8">
-  <title>Meu Álbum</title>
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      text-align: center;
-      background: #f5f5f5;
-      margin: 0;
-      padding: 20px;
-    }
-    h1 {
-      margin-bottom: 20px;
-      color: #333;
-    }
-    .galeria {
-      display: flex;
-      flex-wrap: wrap;
-      justify-content: center;
-      gap: 15px;
-    }
-    .galeria img {
-      width: 250px;
-      border-radius: 12px;
-      box-shadow: 0px 4px 6px rgba(0,0,0,0.3);
-      transition: transform 0.3s;
-    }
-    .galeria img:hover {
-      transform: scale(1.05);
-    }
-  </style>
+  <title>Dia dos Namorados</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <h1>Meu Álbum de Fotos</h1>
-
-  <div class="galeria">
-    <img src="https://www.instagram.com/p/DN8X392kd7ulEPC11npWYBuXv0utQcjxdzzY9g0/?igsh=eGp0c3FhYWRhY3py" alt="Foto 1">
-    <img src="https://www.google.com/imgres?q=foto%20meme%20macaco%20dando%20dedo&imgurl=https%3A%2F%2Fi.pinimg.com%2F564x%2F2f%2Fc5%2F42%2F2fc5429cc937124e13e1b4ff059bc1c5.jpg&imgrefurl=https%3A%2F%2Fbr.pinterest.com%2Fpin%2F701365341944687808%2F&docid=GzfTk0BtxopPQM&tbnid=8_-9RPhd6YJeZM&vet=12ahUKEwiutqLl5a-PAxVUhJUCHQbxKcMQM3oECBkQAA..i&w=550&h=712&hcb=2&ved=2ahUKEwiutqLl5a-PAxVUhJUCHQbxKcMQM3oECBkQAA" alt="phzin">
-    <img src="foto3.jpg" alt="Foto 3">
-    <img src="foto4.jpg" alt="Foto 4">
-  </div>
-
+  <header>
+    <h1>Dia dos Namorados</h1>
+  </header>
+  <section class="fotos">
+    <div class="foto">
+      <img src="foto1.jpg" alt="Foto 1">
+      <p>Foto 1</p>
+    </div>
+    <div class="foto">
+      <img src="foto2.jpg" alt="Foto 2">
+      <p>Foto 2</p>
+    </div>
+    <!-- Adicione mais fotos aqui -->
+  </section>
+  <section class="links">
+    <h2>Links úteis</h2>
+    <ul>
+      <li><a href="https:                                  
+      <li><a href="https://www.example2.com">Site 2</a></li>
+      <!-- Adicione mais links aqui -->
+    </ul>
+  </section>
 </body>
 </html>
