--- a/index.html
+++ b/index.html
@@ -14,73 +14,18 @@
       <p>Foto 1</p>
     </div>
     <div class="foto">
-      <img src="foto2.jpg" alt="Foto 2">
+      <img src="https://files.fm/u/wtck3kvg2p" alt="Foto 2">
       <p>Foto 2</p>
     </div>
     <!-- Adicione mais fotos aqui -->
   </section>
-  <section class="https://www.google.com/imgres?q=foto%20meme%20macaco%20dando%20dedo&imgurl=https%3A%2F%2Fi.pinimg.com%2F564x%2F2f%2Fc5%2F42%2F2fc5429cc937124e13e1b4ff059bc1c5.jpg&imgrefurl=https%3A%2F%2Fbr.pinterest.com%2Fpin%2F701365341944687808%2F&docid=GzfTk0BtxopPQM&tbnid=8_-9RPhd6YJeZM&vet=12ahUKEwiutqLl5a-PAxVUhJUCHQbxKcMQM3oECBkQAA..i&w=550&h=712&hcb=2&ved=2ahUKEwiutqLl5a-PAxVUhJUCHQbxKcMQM3oECBkQAA">
+  <section class="https://files.fm/u/wtck3kvg2p">
     <h2>Links úteis</h2>
     <ul>
       <li><a href="https:                                  
-      <li><a href="https://www.google.com/imgres?q=foto%20meme%20macaco%20dando%20dedo&imgurl=https%3A%2F%2Fi.pinimg.com%2F564x%2F2f%2Fc5%2F42%2F2fc5429cc937124e13e1b4ff059bc1c5.jpg&imgrefurl=https%3A%2F%2Fbr.pinterest.com%2Fpin%2F701365341944687808%2F&docid=GzfTk0BtxopPQM&tbnid=8_-9RPhd6YJeZM&vet=12ahUKEwiutqLl5a-PAxVUhJUCHQbxKcMQM3oECBkQAA..i&w=550&h=712&hcb=2&ved=2ahUKEwiutqLl5a-PAxVUhJUCHQbxKcMQM3oECBkQAA">Site 2</a></li>
+      <li><a href="https>
       <!-- Adicione mais links aqui -->
     </ul>
   </section>
 </body>
 </html>
-
-<!DOCTYPE style.css>
-body {
-  font-family: Arial, sans-serif;
-  background-color: #f2f2f2;
-}
-
-header {
-  background-color: #ff69b4;
-  color: #fff;
-  padding: 20px;
-  text-align: center;
-}
-
-.fotos {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
-}
-
-.foto {
-  margin: 20px;
-  width: 200px;
-}
-
-.foto img {
-  width: 100%;
-  height: 150px;
-  object-fit: cover;
-  border-radius: 10px;
-}
-
-.links {
-  margin-top: 40px;
-}
-
-.links ul {
-  list-style: none;
-  padding: 0;
-  margin: 0;
-}
-
-.links li {
-  margin-bottom: 10px;
-}
-
-.links a {
-  text-decoration: none;
-  color: #337ab7;
-}
-
-.links a:hover {
-  color: #23527c;
-}
-
