--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   </header>
   <section class="fotos">
     <div class="foto">
-      <img src="foto1.jpg" alt="Foto 1">
+      <img src="https://files.fm/u/wtck3kvg2p" alt="Foto 1">
       <p>Foto 1</p>
     </div>
     <div class="foto">
@@ -23,7 +23,7 @@
     <h2>Links úteis</h2>
     <ul>
       <li><a href="https:                                  
-      <li><a href="https>
+      <li><a href="https://files.fm/u/wtck3kvg2p">
       <!-- Adicione mais links aqui -->
     </ul>
   </section>
