--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
   </header>
   <section class="fotos">
     <div class="foto">
-      <img src="https://files.fm/u/wtck3kvg2p" alt="Foto 1">
+      <img src="https://s11.aconvert.com/convert/p3r68-cdx67/r5y94-3nq0p.jpg" alt="Foto 1">
       <p>Foto 1</p>
     </div>
-    <div class="foto">
-      <img src="https://files.fm/u/wtck3kvg2p" alt="Foto 2">
+    <div > 
+      <img src="https://s11.aconvert.com/convert/p3r68-cdx67/r5y94-3nq0p.jpg" alt="Foto 2">
       <p>Foto 2</p>
     </div>
     <!-- Adicione mais fotos aqui -->
