--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
       <img src="https://s11.aconvert.com/convert/p3r68-cdx67/r5y94-3nq0p.jpg" alt="Foto 2">
       <p>Foto 2</p>
     </div>
+    <div>
+      <img src="https://s11.aconvert.com/convert/p3r68-cdx67/3qssk-l9is1.jpg"
+    </div>
     <!-- Adicione mais fotos aqui -->
   </section>
   <section class="https://files.fm/u/wtck3kvg2p">
