--- a/index.html
+++ b/index.html
@@ -33,3 +33,6 @@
 </body>
 </html>
 <head>:</head><link rel="stylesheet" href="style.css">
+<head>:</head><body {
+  font-family: Arial, sans-serif;
+  background-color: #2c2f33; 
