--- a/index.html
+++ b/index.html
@@ -30,6 +30,10 @@
     </ul>
   </section>
 </body>
+<video width="640" height="480" controls>
+  <source src="gatos-fofos.webm" type="video/webm">
+</video>
+
 </html>
 <head>:</head><link rel="stylesheet" href="style.css">
 <head>:</head><body {
