--- a/index.html
+++ b/index.html
@@ -10,18 +10,18 @@
   </header>
   <section class="fotos">
     <div class="foto">
-      <img src="https://s11.aconvert.com/convert/p3r68-cdx67/oir8p-kr8jw.jpg" alt="Foto 1">
+      <img src="" alt="Foto 1">
       <p>Foto 1</p>
     </div>
     <div > 
-      <img src="https://s11.aconvert.com/convert/p3r68-cdx67/entp9-15a3p.jpg" alt="Foto 2">
+      <img src="" alt="Foto 2">
       <p>Foto 2</p>
     </div>
-    <img src="https://s11.aconvert.com/convert/p3r68-cdx67/reani-7a6ck.jpg"
+    <img src=""
     <div>
-    <img src="https://s51.aconvert.com/convert/p3r68-cdx67/p73d7-s3hqk-001.jpg"
+    <img src=""
   </section>
-  <section class="https://files.fm/u/wtck3kvg2p">
+  <section class="">
     <h2>Links úteis</h2>
     <ul>
       <li><a href="https:                                  
