--- a/index.html
+++ b/index.html
@@ -83,10 +83,10 @@
             </div>
 
             <div class="gallery-item">
-                <img src="https://www.google.com/imgres?q=macaco%20meme&imgurl=https%3A%2F%2Fi.pinimg.com%2F564x%2F2f%2Fc5%2F42%2F2fc5429cc937124e13e1b4ff059bc1c5.jpg&imgrefurl=https%3A%2F%2Fbr.pinterest.com%2Fpin%2F701365341944687808%2F&docid=GzfTk0BtxopPQM&tbnid=8_-9RPhd6YJeZM&vet=12ahUKEwjmgZ_I1d-PAxX0GbkGHR4vGk0QM3oECCQQAA..i&w=550&h=712&hcb=2&ved=2ahUKEwjmgZ_I1d-PAxX0GbkGHR4vGk0QM3oECCQQAA" alt="Descrição da Foto 2">
+             <img scr="https://ibb.co/TxP7LzCF" alt="Descrição da Foto 2">
                 <div class="gallery-item-caption">
-                    <h3>Cidade</h3>
-                    <p>A vista panorâmica do centro da cidade à noite.</p>
+                    <h3>ronalt</h3>
+                    <p>macaco.</p>
                 </div>
             </div>
 
