--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
             </div>
 
             <div class="gallery-item">
-             <img scr="https://ibb.co/TxP7LzCF" alt="Descrição da Foto 2">
+             <img scr="https://i.ibb.co/TxP7LzCF/transferir.jpg" alt="Descrição da Foto 2">
                 <div class="gallery-item-caption">
                     <h3>ronalt</h3>
                     <p>macaco.</p>
