--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
             </div>
 
             <div class="gallery-item">
-                <img src="https://via.placeholder.com/400x300?text=Foto+3" alt="Descrição da Foto 3">
+                <img src="https://files.fm/u/5t5zv86u5j" alt="Descrição da Foto 3">
                 <div class="gallery-item-caption">
                     <h3>Animais</h3>
                     <p>Um gato curioso olhando pela janela.</p>
